0.60
----
1. Fix "trough-lower" and "tought-upper" style slider troughs.
2. Fix reading of listview colours under KDE4.
3. If appearance is rounded, round view selections.
4. New focus rect options - standard, highlight, background, filled.
5. Add the ability to specify popup menu light factor.
6. Put more space between arrows on combos if using V arrows.

0.59.7
------
1. Read tooltip colours from qt config file.

0.59.6
------
1. Improve appearance of SWT scrollbars.
2. Fix colour of tri-state checkboxes.

0.59.5
------
1. Draw disabled icons desaturated - more KDE like.
2. 'Fix' pixelation of firefox dialog icons. They look
   slightly blurry, due to being scaled, but this is nicer
   than the previous pixelated icons.
3. Removed KDE event filter (QTC_ADD_EVENT_FILTER cmake option)
   - causes way too many errors.

0.59.4
------
1. Fix reading in of lightBorder for custom gradients.
2. Icon path fix by Ilya Paramonov.

0.59.3
------
1. Also check in share/kde4/apps/kstyle/themes for qtc_*.themerc files.
2. Fix evolution calendar crash.
3. Fix evolution listview headers.
4. Slightly better check/radio positioning.

0.59.2
------
1. Fix appearance of shiny glass defult buttons.
2. Give glass default buttons a light border.
3. New cmake option:

    -DQTC_NEW_MOZILLA=true
        When Firefox, and thunderbird, are being themed - treat them as if they
        are the newer versions. This sets 'newFirefox' and 'newThunderbird' to true
        by default.

0.59.1
------
1. Fix crash.

0.59
----
 1. When drawing gray focus rect, draw only slightly rounded.
 2. Etch/shadow effect now applied to widget sides as well as
    top/bottom.
 3. Add etching to checks, radios, slider grooves, and progressbars.
 4. Option to have progress fill groove - default to true.
 5. Option to display non-editable combo splitter - defaults to true.
 6. Dont do coloured mouse over for toolbar buttons.
 7. Better colored mouse over for checks and radios.