@@ -5,7 +5,8 @@
 3. If appearance is rounded, round view selections.
 4. New focus rect options - standard, highlight, background, filled.
 5. Add the ability to specify popup menu light factor.
-6. Put more space between arrows on combos if using V arrows.
+6. Put more pace between arrows on combos if using V arrows.
+7. Add option to use darkened background colour for menuitem selection.
 
 0.59.7
 ------
